2006-02-24  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_debug.m4, configure : 
	  Do not strip executables on Mac OSX, this seems to remove all access 
	  to global dynamic symbols for loaded modules.

2006-02-14  Mark Grondona <mgrondona@llnl.gov>

	* : Update Copyright dates.

2006-02-13  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Modified to comply with rpmlint 
	  (Ben Woodard <woodard@redhat.com>).

	* README, README.modules, doc/pdsh.1.in, NEWS : Update documentation.

2006-02-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c : Allow arguments to ssh command to be
	  generated at runtime, and thus overrode or appended to by
	  new env vars PDSH_SSH_ARGS and PDSH_SSH_ARGS_APPEND.

2006-02-07  Mark Grondona <mgrondona@llnl.gov>

	* config/ltmain.sh : Remove and regenerate ltmain.sh.

2006-02-02  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c : Change ssh_pid type from int to pid_t.

2006-01-20  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_thd_init) : Initialize th->resolve_hosts.

	* src/pdsh/privsep.c (privsep_rresvport, privsep_server) :
	  Send lport argument passed to privsep_rresvport to privsep
	  server so it can pass this value to rresvport() unchanged.
	  This is required because lport must be initialized on some
	  systems.

2006-01-19  Mark Grondona <mgrondona@llnl.gov>

	* config/libtool.m4 : Update libtool.m4 to version from 1.5.22. 
	  Fixes some problems with dlopen and dlsym on OS X.
	
	* configure.ac : Test for existence of sys/uio.h.

	* src/pdsh/privsep.c : Need to #include <sys/uio.h> on OS X for
	  struct iovec declaration.

	* configure, aclocal.m4, Makefile.in, scripts/Makefile.in, 
	  src/Makefile.in, src/common/Makefile.in, src/modules/Makefile.in,
	  src/qsnet/Makefile.in, src/pdsh/Makefile.in, testsuite/Makefile.in
	  testsuite/pdsh.test/Makefile.in, config/Makefile.in, doc/Makefile.in,
	  etc/Makefile.in:
	  Rerun ./bootstrap with autoconf 2.59, automake 1.9.6, libtool 1.5.22.
